Update code before challenge

--- a/Movies_ETL.ipynb
+++ b/Movies_ETL.ipynb
@@ -4236,6 +4236,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from config import db_password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CONNECT DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/movie_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(db_string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMPORT MOVIE DATA INTO DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df.to_sql(name='movies', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 83.39739966392517 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 190.1959788799286 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 312.3226127624512 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 414.30734276771545 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 531.5250387191772 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 653.9102897644043 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 786.5656797885895 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 889.940132856369 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 1011.6043519973755 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 1143.3334636688232 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 1261.3465189933777 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 1387.8219766616821 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 1496.919644832611 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 1611.2585847377777 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 1744.6663038730621 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 1872.131553888321 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 1980.5166838169098 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 2095.5795998573303 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 2221.1193709373474 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 2328.4189088344574 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 2451.693723678589 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 2571.1442387104034 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 2693.6178228855133 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 2806.071585893631 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 2922.315976858139 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 3036.434928894043 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 3038.423264980316 total seconds elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# IMPORT RATINGS DATA\n",
+    "# NEED TO DIVIDE THE DATA INTO CHUNKS\n",
+    "\n",
+    "# create a variable for the number of rows imported\n",
+    "rows_imported = 0\n",
+    "# get the start_time from time.time()\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for data in pd.read_csv(f'{file_dir}/ratings.csv', chunksize=1000000):\n",
+    "\n",
+    "    # print out the range of rows that are being imported\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "\n",
+    "    # increment the number of rows imported by the size of 'data'\n",
+    "    rows_imported += len(data)\n",
+    "\n",
+    "    # print that the rows have finished importing\n",
+    "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
