--- a/Movies_ETL.ipynb
+++ b/Movies_ETL.ipynb
@@ -4825,22 +4825,22 @@
     "# NEED TO DIVIDE THE DATA INTO CHUNKS\n",
     "\n",
     "# create a variable for the number of rows imported\n",
-    "#rows_imported = 0\n",
-    "# get the start_time from time.time()\n",
-    "#start_time = time.time()\n",
+    "rows_imported = 0\n",
+    "#get the start_time from time.time()\n",
+    "start_time = time.time()\n",
     "\n",
-    "#for data in pd.read_csv(f'{file_dir}/ratings.csv', chunksize=1000000):\n",
+    "for data in pd.read_csv(f'{file_dir}/ratings.csv', chunksize=1000000):\n",
     "\n",
     "    # print out the range of rows that are being imported\n",
-    "    #print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
     "\n",
-    "    #data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
     "\n",
     "    # increment the number of rows imported by the size of 'data'\n",
-    "    #rows_imported += len(data)\n",
+    "    rows_imported += len(data)\n",
     "\n",
     "    # print that the rows have finished importing\n",
-    "    #print(f'Done. {time.time() - start_time} total seconds elapsed')"
+    "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
    ]
   },
   {
